css/styles.css
* {
  box-sizing: border-box;
}

body {
  background-color: #601344;
  color: white;
  font-family: 'Ubuntu', sans-serif;
  font-weight: 300;
  line-height: 1.5em;
  margin: 0;
  font-size: 112.5%;
}

/* ==================== Typo ======================*/

h1 {
  color: white;
  padding: 20px 0 20px 5px;
  font-weight: 300;
  font-size: 170%;
  line-height: 1.2em;
}

h2 {
  color: hotpink;
  font-family: 'Ubuntu', sans-serif;
  font-weight: 300;
}

p {
  text-align: center;
}

a {
  color: white;
  margin: 10px 10px 0 0;
  /*border-bottom: 1px hotpink dotted;*/
  padding: 4px;
  text-decoration: none;
}

strong {
  color: hotpink;
  font-family: 'Ubuntu', sans-serif;
  font-weight: 300;
}

em {
  font-style: normal;
  font-weight: normal;
}

/*=================== Layout ========================*/

main {
  padding: 20px;
}

header {
  background: #1a1d1f;
  padding: 15px;
  border-bottom: 1px hotpink dotted;
  display: flex;
  align-items: center;
}

header a {
  margin-left: auto;
  background: #601344;
  padding: 15px;
  border-radius: 10px;
  text-decoration: none;
}

nav {
  display: flex;
  justify-content: flex-start;
  margin-bottom: 20px;
}

footer {
  background: #2d3033;
  padding: 20px;
  background: #1a1d1f;
  text-align: center;
}

ul {
  list-style: none;
  padding: 0;
  text-align: center;
}

li {
  border-bottom: 2px dotted hotpink;
  padding: px 0;
}

a:hover {
  color: hotpink;
}

/*======================= Classes ===================*/

.portrait {
  width: 180px;
  margin: 40px auto 30px auto;
  display: block;
  box-shadow: 0px 0px 71px -15px rgba(0, 0, 0, 0.75);
  transform: rotate(-10deg);
  border: 2px white solid;
  border-radius: 10px;
}

@media (min-width: 600px) {
  .intro {
    display: flex;
    grid-gap: 80px; /* Wieso geht das? */
  }
  .intro p {
    text-align: left;
  }

  h2 {
    text-align: left;
    display: box;
  }
  .links {
    display: flex;
    justify-content: space-between;
  }

  p {
    text-align: left;
  }

  h1 {
    font-size: 250%;
  }
}

@media (min-width: 900px) {
  .bio {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 60px;
  }

  .bio {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 60px;
  }
}

.social_card {
  background-color: white;
  padding: 10px;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 10px;
  box-shadow: 0px 0px 71px -15px rgba(0, 0, 0, 0.45);
}

.skills {
  display: flex;
  gap: 5px;
  flex-wrap: wrap;
}

.skills li {
  border-bottom: 1px hotpink dotted;
  background: #1a1d1f;
  padding: 10px;
}

.social_card img {
  width: 35%;
}

.link_button {
  border-bottom: 1px hotpink dotted;
  background: #1a1d1f;
  padding: 10px;
}

.last_name {
  color: grey;
}

.impressum {
  margin-left: auto;
}

.contact {
  display: flex;
}

.pinklink {
  border-bottom: hotpink dotted 1px;
}

